--- a/creazione_plot/plot.ipynb
+++ b/creazione_plot/plot.ipynb
@@ -21,7 +21,7 @@
     }
    },
    "source": [
-    "In this notebook we present an analysis of the evolution of LeBron James' offensive game, in terms of shot selection and efficiency, over the course of his NBA career. In particular, we analyze data from the regular seasons from 2003-2004 to 2019-2024, with the aim of understanding how his game has changed over the years and how this has influenced the offensive production of his teams.\n",
+    "In this notebook we present an analysis of the evolution of LeBron James' offensive game, in terms of shot selection and efficiency, over the course of his NBA career. In particular, we analyze data from the regular seasons from 2003-2004 to 2023-2024, with the aim of understanding how his game has changed over the years and how this has influenced the offensive production of his teams.\n",
     "To be more specific, we will focus on the following aspects:"
    ]
   },
@@ -235,7 +235,7 @@
     "### NBA Court Chart\n",
     "To start our analysis, we need to define an NBA court chart, which will serve as the basis for plotting shot data. Below is a function that creates a basketball court chart using the _matplotlib_ library. This function takes an axis object as input, on which the court will be plotted, and returns the axis object for further customization\n",
     "\n",
-    "This function is an adaptation of the one originally provided by Zach Gilbert in his project _\"Visualizing NBA Shots with py-Goldsberry\"_, which is available at this [linl](https://github.com/bradleyfay/py-Goldsberry/blob/master/docs/Visualizing%20NBA%20Shots%20with%20py-Goldsberry.ipynb)."
+    "This function is an adaptation of the one originally provided by Zach Gilbert in his project _\"Visualizing NBA Shots with py-Goldsberry\"_, which is available at this [link](https://github.com/bradleyfay/py-Goldsberry/blob/master/docs/Visualizing%20NBA%20Shots%20with%20py-Goldsberry.ipynb)."
    ]
   },
   {
@@ -420,7 +420,6 @@
     "Before plotting the shot distribution, we need to determine the color and opacity for each area of the court, which will help visualize the hottest zones. This involves two key functions:\n",
     "\n",
     "### Shot Distribution Function\n",
-    "Calculate Shot Distribution\n",
     "This function computes the shot distribution percentage for a given dataset. It takes the dataset as input and returns a dictionary that maps each area to the percentage of shots attempted in that area.\n",
     "\n",
     "#### Auxiliary Function: Generate Shot Attempts Dictionary\n",
@@ -531,7 +530,7 @@
     "\n",
     "The opacity value is crucial as it allows us to visualize minimal differences in shot distribution across different areas.\n",
     "\n",
-    "In this script, a variable named \"max_value\" is defined to represent the overall maximum value of the distribution across all eras. This variable is essential for accurate analysis, enabling effective comparison of shot distributions from different eras. Determining \"max_value\" involves manually identifying the highest values among the distributions from all areas to ensure precision in the analysis."
+    "In this script, a variable named _max_value_ is defined to represent the overall maximum value of the distribution across all eras. This variable is essential for accurate analysis, enabling effective comparison of shot distributions from different eras. Determining _max_value_ involves manually identifying the highest values among the distributions from all areas to ensure precision in the analysis."
    ]
   },
   {
@@ -909,7 +908,7 @@
     "\n",
     "In his recent experiences with the Los Angeles Lakers, LeBron has continued to refine his shot selection, showing a notable increase in three-point attempts from the right wing. This adjustment suggests a deliberate strategy to diversify his scoring options and maintain a balanced offensive approach. Despite a slight decrease in shots from the restricted area, LeBron's overall shot distribution remains well-rounded, emphasizing his adaptability and skillful shot selection.\n",
     "\n",
-    "Another intriguing observation is the decline in midrange shots over the years, aligning with the league-wide trend towards three-point shooting and efficient scoring strategies. LeBron's midrange shot attempts have decreased significantly over his career. Initially, he took 15.5% of his shots from midrange. In recent seasons, this has shifted markedly, with only 8.05% from the left side and 5.52% from the right side, highlighting his adaptation to modern NBA playstyles."
+    "Another intriguing observation is the decline in midrange shots over the years, aligning with the league-wide trend towards three-point shooting and efficient scoring strategies. LeBron's midrange shot attempts have decreased significantly over his career. During his first stint in Cleveland, he took 15.5% of his shots from midrange on both the left and right sides, totaling 31% from this distance. Since moving to the Lakers, these numbers have changed significantly, with only 8.05% from the left side and 5.52% from the right side, highlighting his adaptation to modern NBA playstyles."
    ]
   },
   {
@@ -1447,7 +1446,7 @@
     "This function calculates the Effective Field Goal Percentage (eFG%) for a player based on their shooting data. It takes the dataset as input and returns a DataFrame containing the eFG% for each season. The eFG% formula is defined as follows:\n",
     "\n",
     "$$\n",
-    "  eFG\\% = \\frac{FGM + 0.5 * 3P\\_made}{FGA}\n",
+    "  \\mathit{eFG\\% = \\frac{FGM + 0.5 * 3P_{made}}{FGA}}\n",
     "$$\n"
    ]
   },
@@ -1795,13 +1794,13 @@
     "\n",
     "To evaluate the offensive performance of LeBron's teams, we will utilize a dataset featuring various team statistics, including Offensive Rating (ORtg). ORtg quantifies the number of points a team scores per 100 possessions, offering valuable insights into offensive efficiency.\n",
     "\n",
-    "The dataset is self made by joining some stats from basketball-reference.com which can be accessed directly as a CSV file from the following links: [basketball-reference.com](https://www.basketball-reference.com/players/j/jamesle01.html#advanced) and [statmuse.com](https://www.statmuse.com/nba/ask/nba).\n",
+    "The dataset is self made by joining some stats from [basketball-reference.com](https://www.basketball-reference.com/players/j/jamesle01.html#advanced), which can be accessed directly as a CSV file and [statmuse.com](https://www.statmuse.com/nba/ask/nba).\n",
     "\n",
     "### Offensive Rating: With vs Without LeBron James\n",
     "\n",
     "Our initial visualization will feature a line graph that tracks the progression of Offensive Rating (ORtg) for LeBron's teams over time. ORtg is a pivotal metric for evaluating offensive efficiency, providing insights into how effectively teams score per 100 possessions. By examining the fluctuation of ORtg across various seasons, we can gauge the impact of LeBron's offensive development on his teams' overall performance.\n",
     "\n",
-    "In addition to plotting each season's ORtg, we will incorporate the league average ORtg for contextual analysis. This comparative approach will enable us to discern how each team's offensive performance measures against the league average, highlighting any notable deviations."
+    "In addition to plotting the ORtg for each season, we will incorporate the league average ORtg for contextual analysis. This comparative approach will enable us to discern how each team's offensive performance measures against the league average, highlighting any notable deviations."
    ]
   },
   {
@@ -1938,12 +1937,12 @@
    },
    "source": [
     "### Observations\n",
-    "he visualization highlights a clear trend of improvement in the Offensive Rating (ORtg) of LeBron's teams over the years, signaling enhanced offensive efficiency and productivity. Importantly, teams with LeBron consistently outperform the league average in ORtg, whereas in his absence, ORtg tends to drop significantly, underscoring LeBron's substantial impact on his teams' offensive performance.\n",
+    "The visualization highlights a clear trend of improvement in the Offensive Rating (ORtg) of LeBron's teams over the years, signaling enhanced offensive efficiency and productivity. Importantly, teams with LeBron consistently outperform the league average in ORtg, whereas in his absence, ORtg tends to drop significantly, underscoring LeBron's substantial impact on his teams' offensive performance.\n",
     "\n",
     "Moreover, except for the initial years of his career, LeBron James has consistently elevated his teams' offensive output, with noticeable spikes in ORtg during his tenure. This pattern underscores LeBron's pivotal role in driving offensive success and boosting his teams' scoring capabilities, ultimately leading to improved overall performance.\n",
     "\n",
     "### ORtg vs eFG%: Exploring Offensive Efficiency\n",
-    "To delve deeper into LeBron James's impact on offensive performance, we will examine the correlation between his effective field goal percentage (eFG%) and his teams' Offensive Rating (ORtg). This analysis aims to elucidate how LeBron's shooting efficiency influences his team's overall offensive success.\n",
+    "To gain a further comprehension of LeBron James' impact on offensive performance, we will examine the correlation between his effective field goal percentage (eFG%) and his teams' Offensive Rating (ORtg). This analysis aims to elucidate how LeBron's shooting efficiency influences his team's overall offensive success.\n",
     "\n",
     "Visualizing this relationship through a kernel density estimation (KDE) plot offers a clear depiction of the correlation between LeBron's individual performance and his teams' ORtg. KDE plots are effective for understanding the distribution of two variables and revealing potential correlations. The shape and orientation of the plot can indicate the strength and direction of the relationship: an elongated shape along the main diagonal suggests a positive correlation, while a different orientation suggests a negative correlation. Moreover, the density of points in specific areas of the plot can highlight clusters or patterns in the data, providing further insights into LeBron's impact on offensive efficiency.\n",
     "\n",
@@ -1977,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "7d1979f5",
    "metadata": {
     "slideshow": {
@@ -2063,7 +2062,6 @@
    "source": [
     "### Observations\n",
     "\n",
-    "Observations\n",
     "The KDE plot clearly illustrates a positive correlation between LeBron's shooting efficiency and his teams' Offensive Rating (ORtg). The elongated shape along the main diagonal indicates a robust relationship, highlighting LeBron's significant impact on his teams' offensive success through his individual shooting efficiency. This correlation underscores how LeBron's scoring ability directly influences his teams' overall offensive performance and success.\n",
     "\n",
     "This relationship can largely be attributed to LeBron's high Usage Rate, which measures the proportion of team plays involving him while he is on the court. A higher Usage Rate signifies that LeBron is heavily involved in his team's offensive actions, thereby influencing overall efficiency and productivity. The strong positive correlation observed between LeBron's efficiency and his teams' ORtg suggests that his individual contributions play a crucial role in determining his team's offensive output.\n",
@@ -2113,9 +2111,20 @@
    "source": [
     "Key findings from our analysis include:\n",
     "\n",
-    "- There is a notable increase in LeBron's three-point attempts (+5.22% on the left side and +1.51% on the right side) and a decline in midrange shots (-7.45% on the left side and -9.98% on the right side).\n",
+    "- From his first times in Cleveland to the LAL era, there is a notable increase in LeBron's three-point attempts (+5.22% on the left side and +1.51% on the right side) and a decline in midrange shots (-7.45% on the left side and -9.98% on the right side).\n",
     "- His shooting efficiency has improved over time but has shown variability, particularly in three-point shooting. His eFG% has increased, but with noticeable fluctuations.\n",
     "- LeBron's individual performance has a strong positive correlation with his teams' Offensive Rating (0.707). Additionally, the ORtg of his teams, when he is on the floor, has consistently outperformed the league average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3069052",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
